# DevCleaner

./: .gitignore  Cargo.toml  README.md
sample/: README.md
sample/basic/: app.ts  math.ts  side-effects.ts
sample/basic/utils/: logger.ts
sample/web/: Button.tsx  index.tsx
src/: analyzer.rs  main.rs  transform.rs  types.rs  walker.rs
