[package]
name = "dev_cleaner"
version = "0.1.0"
edition = "2024"
description = "Removes unused imports from TS/JS files"
license = "MIT"
repository = "https://github.com/Nonqs/DevCleaner"

[dependencies]
rayon = "1.12.0"
swc_common = "21.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_codegen = "26.0.1"
swc_ecma_parser = "38.0.0"
swc_ecma_visit = "23.0.0"
walkdir = "2.5.0"
